--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": true,
-  "printWidth": 80,
-  "singleQuote": false,
-  "trailingComma": "all",
-  "bracketSpacing": true,
-  "arrowParens": "always"
+	"tabWidth": 4,
+	"useTabs": true,
+	"semi": true,
+	"printWidth": 100,
+	"singleQuote": false,
+	"trailingComma": "es5",
+	"bracketSpacing": true,
+	"arrowParens": "always"
 }
