--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	],
 	"dependencies": {
 		"eslint": "^8.56.0",
-		"prettier": "^3.2.5"
+		"prettier": "^3.2.5",
+		"react-router-dom": "^6.22.0"
 	}
 }
