Set up mongo connection

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"format": "npx prettier . --write",
-		"lint": "npx eslint ."
+		"lint": "npx eslint .",
+		"frontend": "npm -w frontend run start",
+		"backend": "npm -w backend run dev"
 	},
 	"author": "",
 	"license": "ISC",
@@ -14,7 +16,11 @@
 		"packages/*"
 	],
 	"dependencies": {
+		"cors": "^2.8.5",
+		"env-cmd": "^10.1.0",
 		"eslint": "^8.56.0",
+		"mongoose": "^8.1.1",
+		"nodemon": "^3.0.3",
 		"prettier": "^3.2.5"
 	}
 }
