--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,7 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "env-cmd -f ./config/.env nodemon src/index.js",
+		"server": "env-cmd -f ./config/.env node src/index.js"
 	},
 	"type": "module",
 	"author": "",
