--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"dependencies": {
 		"axios": "^1.6.7",
 		"cors": "^2.8.5",
-		"env-cmd": "^10.1.0",
+		"dotenv": "^16.4.4",
 		"eslint": "^8.56.0",
 		"mongoose": "^8.1.1",
 		"nodemon": "^3.0.3",
