--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"mongoose": "^8.1.1",
 		"nodemon": "^3.0.3",
 		"prettier": "^3.2.5",
+		"react-hot-toast": "^2.4.1",
 		"react-router-dom": "^6.22.0"
 	}
 }
