--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "npx eslint . && npx prettier . --check",
+		"test": "echo \"No tests specified.\"",
+		"start": "npm -w backend run start",
 		"format": "npx prettier . --write",
-		"lint": "npx eslint .",
-		"frontend": "npm -w frontend run start",
-		"backend": "npm -w backend run dev"
+		"frontend-dev": "npm -w frontend run start",
+		"backend-dev": "npm -w backend run dev"
 	},
 	"author": "",
 	"license": "ISC",
