--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "env-cmd -f ./config/.env nodemon src/index.js",
-		"server": "env-cmd -f ./config/.env node src/index.js"
+		"start": "env-cmd -f ./config/.env node src/index.js"
 	},
 	"type": "module",
 	"author": "",
