--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -16,6 +16,4 @@ jobs:
                   node-version: 20
             - run: npm ci
             - run: npm run lint
-            - run: npm run -w express-backend lint
-            - run: npm run -w react-frontend lint
-            - run: npm run -w react-frontend build
+            - run: npm run -w backend start
