--- a/.github/workflows/ci-cd_chickentinder-backend.yml
+++ b/.github/workflows/ci-cd_chickentinder-backend.yml
@@ -6,7 +6,7 @@ name: Build and deploy Node.js app to Azure Web App - chickentinder-backend
 on:
   push:
     branches:
-      - ci-cd
+      - main
   workflow_dispatch:
 
 jobs:
@@ -23,12 +23,14 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm install --workspaces=false
+          npm run -w backend build --if-present
+          npm run -w backend test --if-present
+        working-directory: packages/backend
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
+        working-directory: packages/backend
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
