Removed exit 1, removed run build

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "echo \"Error: no test specified\"",
 		"dev": "env-cmd -f ./config/.env nodemon src/index.js",
 		"start": "env-cmd -f ./config/.env node src/index.js"
 	},
