--- a/.github/workflows/ci-cd_chickentinder-backend.yml
+++ b/.github/workflows/ci-cd_chickentinder-backend.yml
@@ -36,6 +36,7 @@ jobs:
               with:
                   name: node-app
                   path: release.zip
+              working-directory: packages/backend
 
     deploy:
         runs-on: ubuntu-latest
