--- a/.github/workflows/ci-cd_chickentinder-backend.yml
+++ b/.github/workflows/ci-cd_chickentinder-backend.yml
@@ -35,8 +35,7 @@ jobs:
               uses: actions/upload-artifact@v3
               with:
                   name: node-app
-                  path: release.zip
-              working-directory: packages/backend
+                  path: packages/backend/release.zip
 
     deploy:
         runs-on: ubuntu-latest
