--- a/package.json
+++ b/package.json
@@ -17,13 +17,6 @@
 		"packages/*"
 	],
 	"dependencies": {
-		"cors": "^2.8.5",
-		"env-cmd": "^10.1.0",
-		"eslint": "^8.56.0",
-		"mongoose": "^8.1.1",
-		"nodemon": "^3.0.3",
-		"prettier": "^3.2.5",
-		"react-hot-toast": "^2.4.1",
-		"react-router-dom": "^6.22.0"
+		"prettier": "^3.2.5"
 	}
 }
