--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hot-toast": "^2.4.1",
+		"react-router-dom": "^6.22.2",
 		"react-scripts": "5.0.1",
 		"socket.io-client": "^4.7.4",
 		"web-vitals": "^2.1.4"
