--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -29,7 +29,7 @@ jobs:
                   npm run test --if-present
                   npm run build --if-present
               env: 
-                  CI: true
+                  CI: false
               working-directory: packages/frontend
             # Deploy to Netlify using our production secrets
             - name: Deploy to netlify
