--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"prettier": "^3.2.5"
 	},
 	"devDependencies": {
+		"eslint-plugin-cypress": "^2.15.1",
 		"eslint-plugin-react": "^7.33.2"
 	}
 }
