--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -16,3 +16,4 @@ jobs:
                   node-version: 20
             - run: npm ci
             - run: npm run lint
+            - run: npm run test
