--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"devDependencies": {
 		"eslint-plugin-cypress": "^2.15.1",
 		"eslint-plugin-react": "^7.33.2",
+		"nodemon": "^3.1.0",
 		"start-server-and-test": "^2.0.3"
 	}
 }
