--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,6 +6,10 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"bcryptjs": "^2.4.3",
+		"bootstrap": "^5.2.0-beta1",
+		"common-tags": "^1.8.2",
+		"jsonfile": "^6.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hot-toast": "^2.4.1",
