--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,15 +6,11 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
-		"bcryptjs": "^2.4.3",
-		"bootstrap": "^5.2.0-beta1",
-		"common-tags": "^1.8.2",
-		"jsonfile": "^6.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hot-toast": "^2.4.1",
 		"react-router-dom": "^6.22.2",
-		"react-scripts": "5.0.1",
+		"react-scripts": "^5.0.1",
 		"react-timer-hook": "^3.0.7",
 		"socket.io-client": "^4.7.4",
 		"web-vitals": "^2.1.4"
@@ -44,6 +40,8 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/plugin-transform-optional-chaining": "^7.23.4",
+		"@babel/plugin-transform-private-methods": "^7.23.3",
 		"tailwindcss": "^3.4.1"
 	}
 }
