--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,8 +13,10 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"buffer-equal-constant-time": "^1.0.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
+		"ecdsa-sig-formatter": "^1.0.11",
 		"express": "^4.18.3",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.2.0",
