--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -21,3 +21,4 @@ jobs:
                   REACT_APP_API_URL: http://localhost:8000
                   DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
                   TENOR_API_KEY: ${{ secrets.TENOR_API_KEY }}
+                  JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
